twhistory homepage work

--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -1,1 +1,83 @@
-Welcome home
+<div id="main"> 
+	<div class="time-line"> 
+		<ul> 
+			<li>1810</li>					<li>1820</li>					<li>1830</li>					<li>1840</li>					<li>1850</li>					<li>1860</li>					<li>1870</li>					<li>1880</li>					<li>1890</li>					<li>1900</li> 
+		</ul> 
+		<a href="#" class="point point1815">1815</a><!-- point --> 
+		<a href="#" class="point point1830">1830</a><!-- point --> 
+		<a href="#" class="point point1847">1847</a><!-- point --> 
+		<a href="#" class="point point1872">1872</a><!-- point --> 
+		<a href="#" class="point point1874">1874</a><!-- point --> 
+		<a href="#" class="point point1896">1896</a><!-- point --> 
+	</div><!-- time line --> 
+	<div class="main-holder"> 
+		<div id="content"> 
+			<div class="feature"> 
+				<div class="feature-holder"> 
+					<ul class="options-list">								<li><a href="#" class="twitter">twitter</a></li>								<li><a href="#" class="comments">comments</a></li>								<li><a href="#" class="my-space">my-space</a></li>								<li><a href="#" class="doc">doc</a></li>							</ul><!-- options list --> 
+					<h2 class="text-feature">featured re-enactment</h2><!-- text featured --> 
+					<div class="row"> 
+						<div class="img-holder"> 
+							<h3 class="text-sinking">Sinking of the Titanik</h3><!-- text sinking --> 
+							<img src="images/img01.jpg" alt="" width="332" height="224" /> 
+						</div><!-- img holder --> 
+						<ul class="cite-list"> 
+							<li> 
+								<div class="visual"> 
+									<img src="images/img02.jpg" alt="" width="62" height="62" /> 
+								</div><!-- visual --> 
+								<div class="text-holder"> 
+									<p><strong class="name">C_Lightoller</strong> Just sent lifeboat 12 away with 40 women and children</p> 
+									<em class="date"> Jun 11, 1:25 AM</em><!-- date --> 
+								</div><!-- text holder --> 
+							</li> 
+							<li> 
+								<div class="visual"> 
+									<img src="images/img03.jpg" alt="" width="62" height="62" /> 
+								</div><!-- visual --> 
+								<div class="text-holder"> 
+									<p><strong class="name">J_Phillips</strong>  Word is we are sinking. Staying at my post. Trying to raise another ship on our wireless.</p> 
+									<em class="date">Jun 11, 1:20AM</em><!-- date --> 
+								</div><!-- text holder --> 
+							</li> 
+							<li> 
+								<div class="visual"> 
+									<img src="images/img04.jpg" alt="" width="62" height="62" /> 
+								</div><!-- visual --> 
+								<div class="text-holder"> 
+									<p><strong class="name">C_Lightoller</strong> I gave them orders to row towards the lights of the ship that was still visible but not responding.</p> 
+									<em class="date"> Jun 11, 1:16 AM</em><!-- date --> 
+								</div><!-- text holder --> 
+							</li> 
+							<li> 
+								<div class="visual"> 
+									<img src="images/img05.jpg" alt="" width="62" height="62" /> 
+								</div><!-- visual --> 
+								<div class="text-holder"> 
+									<p><strong class="name">Capt_Smith</strong>Titanic just lurched to port, with the deck tilting. The band is playing for us. Boats No. 9 and No. 10 are lowering.</p> 
+									<em class="date"> Jun 11, 1:15 AM</em><!-- date --> 
+								</div><!-- text holder --> 
+							</li> 
+						</ul><!-- cite list --> 
+					</div><!-- row --> 
+				</div><!-- feature holder --> 
+			</div><!-- feture block --> 
+			<h2>How it Works</h2> 
+			<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
+		</div><!-- content --> 
+		<div id="sidebar"> 
+			<h3 class="text-bring">bring history to life ...</h3><!-- text-bring --> 
+			<ul class="about-list">						<li>"Seeing the events <strong>unfold in real time</strong> gave me a completely new perspective."</li>						<li>"Students learned to <strong>see primary sources as accessible</strong>, not scary." </li>						<li>"<strong>Getting into character</strong> helps you realize that these were really people."</li>						<li>"They came out of it with a very good <strong>understanding</strong> of a <strong>complex situation</strong>" </li>					</ul><!-- about list --> 
+			<h3 class="text-what">What to do around here</h3><!-- text-what --> 
+			<div class="search-form"> 
+				<form action="#"> 
+					<fieldset> 
+						<input type="text" class="text" value="" /><!-- input text --> 
+						<input type="submit" class="submit" value="search" /><!-- submit --> 
+					</fieldset> 
+				</form> 
+			</div><!-- search form --> 
+			<ul class="options-list">						<li><a href="#" class="text-see"><span>See broadcast chedule</span></a></li>						<li><a href="#" class="text-browse"><span>Browse Re-enactuments</span></a></li>						<li><a href="#" class="text-create"><span>Create Re-enactuments</span></a></li>					</ul><!-- options list --> 
+		</div><!-- sidebar --> 
+	</div><!-- main holder --> 
+</div>
