--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -1,12 +1,5 @@
-<div class="block" id="footer">
-</div>
-<div class="block" align="center">
-   <%= locale_link 'Deutsch', 'de' %>
- | <%= locale_link 'English', 'en' %>
- | <%= locale_link 'Español', 'es' %>
- | <%= locale_link 'Français', 'fr' %>
- | <%= locale_link 'Nederlands', 'nl' %>
- | <%= locale_link 'Русский язык', 'ru' %>
- | <%= locale_link '中文', 'zh' %>
- | <%= locale_link '日本語', 'ja' %>
+<div id="footer"> 
+	<ul id="nav"> 
+		<li><a href="#">Home</a></li>			<li><a href="#">ReEnactments</a></li>			<li><a href="#">Broadcast Schedule</a></li>			<li><a href="#">In the News</a></li>			<li><a href="#">About</a></li>			<li><a href="#">Contact</a></li>		</ul><!-- nav --> 
+	<p>&copy; copyleft Twhistory Online Licensed under Creative Commons BYNCSA : feel free to use, adapt and share, but always share alike</p> 
 </div>
