--- a/app/views/layouts/global/_header.html.erb
+++ b/app/views/layouts/global/_header.html.erb
@@ -1,4 +1,10 @@
-<div class="block" id="header">
-    <a href="/"><div id="logo" class="span-8 column">&nbsp;</div></a>
-    <%= render :partial => 'layouts/global/login_controls' %>
-  </div>
+<div id="header">
+	<h1 class="logo"><a href="#">Twistory</a></h1><!-- logo --> 
+	<div class="form-holder"> 
+		<div class="login-form">
+		  <%= render :partial => 'layouts/global/login_controls' %>		 		
+		</div>
+		<a href="#" class="btn-corner">Teachers corner</a> 
+	</div><!-- form holder --> 
+	<strong class="slogan">Those who forget history are doomed to re-tweet it</strong><!-- slogan --> 
+</div><!-- header -->
