--- a/app/views/layouts/global/_header.html.erb
+++ b/app/views/layouts/global/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
-	<h1 class="logo"><a href="#">Twistory</a></h1><!-- logo --> 
+	<h1 class="logo"><a href="/">Twistory</a></h1><!-- logo --> 
 	<div class="form-holder"> 
 		<div class="login-form">
 		  <%= render :partial => 'layouts/global/login_controls' %>		 		
