--- a/app/views/layouts/global/_side_bar.html.erb
+++ b/app/views/layouts/global/_side_bar.html.erb
@@ -1,18 +1,23 @@
 <div id="sidebar"> 
-	<h3 class="text-bring">bring history to life ...</h3><!-- text-bring --> 
-	<div class="search-form"> 
-		<form action="#"> 
+	<h3 class="text-bring">bring history to life ...</h3>
+	<div class="search-form">
+	  <%= form_tag search_path do %>
 			<fieldset> 
-				<input type="text" class="text" value="" /><!-- input text --> 
-				<input type="submit" class="submit" value="search" /><!-- submit --> 
+				<input type="text" class="text" value="" id="query" name="query" />
+				<input type="submit" class="submit" value="search" />
 			</fieldset> 
-		</form> 
-	</div><!-- search form --> 
+		<% end -%>
+	</div>
 	<ul class="options-list"> 
-		<li><a href="#" class="text-see"><span>See broadcast chedule</span></a></li> 
-		<li><a href="#" class="text-browse"><span>Browse Re-enactuments</span></a></li> 
-		<li><a href="#" class="text-create"><span>Create Re-enactuments</span></a></li> 
+		<li><a href="<%= schedule_path %>" class="text-see"><span>See broadcast schedule</span></a></li> 
+		<li><a href="#" class="text-browse"><span>Browse Re-enactments</span></a></li> 
+		<li><a href="#" class="text-create"><span>Create Re-enactment</span></a></li> 
 	</ul><!-- options list --> 
-	<h3 class="text-twhistory">Twhistory in the news</h3><!-- text Twhistory --> 
-	<ul class="about-list">						<li>"Seeing the events <strong>unfold in real time</strong> gave me a completely new perspective."</li>						<li>"Students learned to <strong>see primary sources as accessible</strong>, not scary." </li>						<li>"<strong>Getting into character</strong> helps you realize that these were really people."</li>						<li>"They came out of it with a very good <strong>understanding</strong> of a <strong>complex situation</strong>" </li>					</ul><!-- about list --> 
+	<h3 class="text-twhistory">TwHistory in the news</h3><!-- text Twhistory --> 
+	<ul class="about-list">
+	  <li>"Seeing the events <strong>unfold in real time</strong> gave me a completely new perspective."</li>
+	  <li>"Students learned to <strong>see primary sources as accessible</strong>, not scary." </li>
+	  <li>"<strong>Getting into character</strong> helps you realize that these were really people."</li>
+	  <li>"They came out of it with a very good <strong>understanding</strong> of a <strong>complex situation</strong>" </li>
+	</ul>
 </div>
