setting up models

--- a/app/views/layouts/global/_side_bar.html.erb
+++ b/app/views/layouts/global/_side_bar.html.erb
@@ -10,8 +10,8 @@
 	</div>
 	<ul class="options-list"> 
 		<li><a href="<%= schedule_path %>" class="text-see"><span>See broadcast schedule</span></a></li> 
-		<li><a href="#" class="text-browse"><span>Browse Re-enactments</span></a></li> 
-		<li><a href="#" class="text-create"><span>Create Re-enactment</span></a></li> 
+		<li><a href="<%= projects_path %>" class="text-browse"><span>Browse Re-enactments</span></a></li> 
+		<li><a href="<%= new_project_path %>" class="text-create"><span>Create Re-enactment</span></a></li> 
 	</ul><!-- options list --> 
 	<h3 class="text-twhistory">TwHistory in the news</h3><!-- text Twhistory --> 
 	<ul class="about-list">
