--- a/app/views/layouts/global/_login_controls.html.erb
+++ b/app/views/layouts/global/_login_controls.html.erb
@@ -1,17 +1,19 @@
 <% if logged_in? -%>
-  <%= link_to t('muck.users.sign_out_title'), logout_path %>
+  <div class="login-form-spacer"></div>
 <% else -%>
-  <%= form_for :user_session, :url => user_session_path do |f| -%>
-    <fieldset>
-      <input type="submit" class="submit" />					
-      <div class="row">								
-        <label for="lbl01" class="text-username"><%= I18n.t('muck.users.username') %></label>							
-        <%= f.text_field :login, :id => "lbl01", :class =>"text" %>
-      </div>
-      <div class="row">								
-        <label for="lbl02" class="text-password"><%= I18n.t('muck.users.password') %></label>
-        <%= f.password_field :login, :id => "lbl02", :class =>"text" %>
-      </div>
-    </fieldset>
-  <% end -%>          
+  <div class="login-form">
+    <%= form_for :user_session, :url => user_session_path do |f| -%>
+      <fieldset>
+        <input type="submit" class="submit" />					
+        <div class="row">								
+          <label for="lbl01" class="text-username"><%= I18n.t('muck.users.username') %></label>							
+          <%= f.text_field :login, :id => "lbl01", :class =>"text" %>
+        </div>
+        <div class="row">								
+          <label for="lbl02" class="text-password"><%= I18n.t('muck.users.password') %></label>
+          <%= f.password_field :login, :id => "lbl02", :class =>"text" %>
+        </div>
+      </fieldset>
+    <% end -%>
+  </div>         
 <% end -%>
