--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New character</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', characters_path %>
+<div class="common-form">
+  <h1>New Character</h1>
+  <%= muck_form_for :character, :url => project_characters_path(@project), :html => {:id => "new-character-form", :name => 'new-character-form'} do |f| -%>
+  	<%= output_errors(translate('character.new_problem'), {:class => 'help-box'}, @character) %>
+    <%= render 'form', :f => f %>
+  	<div class="button form-row">
+    	<%= f.submit 'Create' %>
+    </div>
+  <% end -%>
+</div>
