--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="common-form">
-  <h1>Edit Re-enactment: <%= @project.name %></h1>
+  <h1>Edit Re-enactment: <%= @project.title %></h1>
   <%= muck_form_for @project, :url => project_path(@projec), :html => {:id => "edit-project-form", :name => 'edit-project-form', :class => 'common-form'} do |f| -%>
   	<%= output_errors(translate('projects.edit_problem'), {:class => 'help-box'}, @project) %>
     <%= render 'form', :f => f %>
   	<div class="button form-row">
-    	<%= f.submit 'Create ReEnactment' %>
+    	<%= f.submit translate('general.save') %>
     </div>
   <% end -%>
 </div>
