--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,7 +4,7 @@
   	<%= output_errors(translate('projects.new_problem'), {:class => 'help-box'}, @project) %>
     <%= render 'form', :f => f %>
   	<div class="button form-row">
-    	<%= f.submit 'Create ReEnactment' %>
+    	<%= f.submit translate('general.create') %>
     </div>
   <% end -%>
 </div>
