--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-sinking2"><%= @project.title %> (<%= link_to 'Edit', edit_project_path(@project) if @project.can_edit?(current_user) %>)</h2>
+<h2 class="text-sinking2"><%= @project.title %> <%= link_to translate('projects.edit'), edit_project_path(@project) if @project.can_edit?(current_user) %></h2>
 <span class="author"><strong>Recreated by:</strong><%= @project.user.display_name %></span> 
 <div class="broadcast"> 
 	<div class="heading">
@@ -8,15 +8,15 @@
 </div><!-- broadcast --> 
 <div class="column-holder"> 
 	<div class="column"> 
-		<h3 class="ico-peoples">Historical Figures</h3> 
+		<h3 class="ico-peoples">Historical Figures <%= link_to translate('projects.add'), new_project_character_path(@project) if @project.can_edit?(current_user) %></h3> 
 		<ul class="cite-list light"> 
-			<%= render 'projects/character', :collection => @project.characters %>
-		</ul><!-- cite list --> 
-	</div><!-- column --> 
+			<%= render :partial => 'projects/character', :collection => @characters %>
+		</ul>
+	</div>
 	<div class="column"> 
-		<h3 class="ico-comments">Historical Timeline</h3> 
+		<h3 class="ico-comments">Historical Timeline <%= link_to translate('projects.add'), project_items_path(@project) if @project.can_edit?(current_user) %></h3> 
 		<ul class="cite-list">
-		  <%= render 'projects/item', :collection => @project.items %> 
+		  <%= render :partial => 'projects/item', :collection => @items %> 
 		</ul><!-- cite list --> 
 		<ul class="links">
 		  <li><a href="#">View Full Re-Enactment Archive</a></li>
