--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,7 +14,7 @@
 		</ul>
 	</div>
 	<div class="column"> 
-		<h3 class="ico-comments"><%= link_to 'Historical Timeline', project_items_path(@project) %> <span><%= link_to translate('projects.add'), project_items_path(@project) if @project.can_edit?(current_user) %></span></h3> 
+		<h3 class="ico-comments"><%= link_to 'Historical Timeline', project_items_path(@project) %> <span><%= link_to translate('projects.add'), new_project_item_path(@project) if @project.can_edit?(current_user) %></span></h3> 
 		<ul class="cite-list">
 		  <%= render :partial => 'projects/item', :collection => @items %> 
 		</ul><!-- cite list --> 
