--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,17 +1,31 @@
-<%= form_for(@item) do |f| %>
-  <% if @item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
+<%= f.menu_select :character_id, translate('items.character'), @project.characters %>
+<div class="form-row date-time">
+  <label><%= translate('items.event_date_time') %></label>
+  <%= text_field_tag :event_date, just_date(@item.event_date_time), { :class => "date_pick" } -%>
+  <label>At</label>
+  <%= text_field_tag :event_time, just_time(@item.event_date_time), { :class => 'time_pick' } %>
+</div>
+<%= f.text_area :content, { :label => translate('items.content'),
+                            :tip => "Enter content for this event",
+                            :extra_html => '<div id="charlimitinfo">(140 characters or less)</div>'} %>
+<%= f.text_area :source, { :label => translate('items.source') } -%>
+<%= image_tag @item.photo.url(:thumb) if @item && @item.photo_file_name %>
+<%= f.file_field :photo, { :label => 'Upload a Photo (Please use a square image)' } %>
+<%= f.text_field :location, { :label => translate('items.location') } -%>
 
-      <ul>
-      <% @item.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+<script>
+  jQuery(document).ready(function(){
+    jQuery('.date_pick').datepicker({
+        			changeMonth: true,
+        			changeYear: true,
+        			numberOfMonths: 3,
+              showButtonPanel: true,
+              yearRange: 'c-200:c+50'
+        		});
+        		
+    //jQuery('.time_pick').timepickr({ format12: '{h:d}:{m:02.d} {z:s}', convention: 12 });
+    jQuery('.tweet').keyup(function(){
+      limitChars(this, 140, this.siblings('.charlimitinfo'));
+    })
+  });
+</script>
