--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing item</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+<div id="event-form" class="common-form">
+  <h1>Edit Event</h1>
+  <%= muck_form_for @item, :url => project_item_path(@project, @item), :html => { :multipart => true, :id => "new-item-form", :name => 'new-item-form' } do |f| -%>
+  	<%= output_errors(translate('items.edit_problem'), {:class => 'help-box'}, @item) %>
+    <%= render 'form', :f => f %>
+  	<div class="button form-row">
+    	<%= f.submit translate('general.save') %>
+    </div>
+  <% end -%>
+</div>
